<resources>
    <!--sky ecochain  Sky Ecochain-->
    <string name="app_name">Sky Ecochain</string>
    <string name="app_name1">--- Sky Ecochain ---</string>
    <string name="title_wallet">资产</string>
    <string name="title_transaction">交易</string>
    <string name="title_ecotope">生态</string>
    <string name="title_consult">资讯</string>
    <!--我的模块-->
    <string name="title_my">我的</string>
    <string name="my_show_language">显示语言</string>
    <string name="my_show_language_system">随系统语言</string>
    <string name="my_show_language_en">英文</string>
    <string name="my_show_language_zh">中文</string>

    <string name="my_realname">实名认证</string>
    <string name="my_realname_no">未认证</string>
    <string name="my_realname_wait">待审核</string>
    <string name="my_realname_disable">禁用</string>
    <string name="my_realname_reject">驳回</string>
    <string name="my_realname_cancel">注销</string>
    <string name="my_realname_yes">已认证</string>
    <string name="my_gesture">手势密码</string>
    <string name="my_gesture_set">已设置</string>
    <string name="my_gesture_noset">未设置</string>
    <string name="my_setting_gesture">设置手势密码</string>
    <string name="my_check_gesture">验证手势密码</string>
    <string name="my_forget_paywd">忘记手势密码?</string>
    <string name="my_aboutme">关于我们</string>
    <string name="my_suggestion">意见反馈</string>
    <string name="my_version">当前版本</string>
    <string name="my_update">检查更新</string>
    <string name="my_add_paytype">添加收款方式</string>
    <string name="my_paytype_wechat_hint">请输入微信号</string>
    <string name="my_paytype_alipay_hint">请输入支付宝号</string>
    <string name="my_paytype_unionpay_username_hint">持卡人姓名</string>
    <string name="my_paytype_unionpay_bankname_hint">银行名称</string>
    <string name="my_paytype_unionpay_bankaddress_hint">银行卡开户地址</string>
    <string name="my_paytype_unionpay_bankno_hint">银行卡号</string>
    <string name="action_settings">Settings</string>

    <string name="my_paytype_upload">上传</string>
    <string name="my_paytype_re_upload">重新上传</string>
    <!--实名认证-->
    <string name="my_realname_hint">请输入您的真实姓名</string>
    <string name="my_identity_hint">请输入您的身份证号</string>
    <string name="my_front_hint">拍摄上传，身份证正面</string>
    <string name="my_back_hint">拍摄上传，身份证背面</string>
    <string name="my_upload_confirm">确认上传</string>
    <!--关于我们-->
    <string name="my_network">官网</string>
    <string name="my_network_url">http://www.skyecochain.com/</string>
    <string name="my_forum">论坛</string>
    <string name="my_microblog">微博</string>
    <string name="my_forum_url">https://weibo.com/u/6177204408</string>
    <!--意见反馈-->
    <string name="my_suggestion_hint">请填写你的意见和建议</string>
    <string name="my_phone_hint">请填写你的电话号码</string>
    <string name="my_suggestion_submit">提交反馈</string>
    <!--在线客服-->
    <string name="my_onlineservice">在线客服</string>
    <!--登录 -->
    <string name="login_login">登录</string>
    <string name="login_account_hint">请输入邮箱或手机号码</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_pwd_forget">忘记密码?</string>
    <string name="login_account_not">还没有Sky Ecochain账号?</string>
    <string name="login_goto_regist">去注册</string>
    <string name="login_retrieve_password">找回密码</string>
    <string name="login_pwd_update">重置密码</string>
    <string name="login_update">重置</string>
    <!--注册-->
    <string name="login_regist">注册</string>
    <string name="login_explain">国家或地区修改后不可更改</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_send_code">发送验证码</string>
    <string name="login_regist_email">邮箱注册</string>
    <string name="login_email_hint">请输入邮箱</string>
    <string name="login_account_yes">已有Sky Ecochain账号</string>
    <string name="login_goto_login">去登陆</string>
    <string name="login_next">下一步</string>
    <string name="regist_pwd_set">设置密码</string>
    <string name="set_pwd_explain">请输入8-20位字符，不可以是纯数字。</string>
    <string name="regist_pwd_hint">设置密码</string>
    <string name="regist_pwd_sure_hint">确认密码</string>
    <string name="regist_invitation_code">邀请码（选填）</string>
    <string name="regist_invitation_code_hint">请输入邀请码</string>
    <string name="regist_agree">我同意</string>
    <string name="regist_user_agreement">《用户协议》</string>
    <string name="regist_congratulations">恭喜您，注册成功！</string>
    <string name="regist_phone_not_null">手机号不能为空！</string>
    <string name="regist_phone_resend">s后重发！</string>
    <!--钱包-->
    <string name="wallet_asset">资产</string>
    <string name="wallet_my_wallet">我的钱包</string>
    <string name="wallet_total">总资产￥</string>
    <string name="wallet_collect">收藏</string>
    <string name="wallet_collection">收款</string>
    <string name="wallet_transfer">转账</string>
    <string name="wallet_transfer_success">转账成功</string>
    <string name="wallet_chain_all">全部</string>
    <string name="wallet_chain_into">转入</string>
    <string name="wallet_chain_out">转出</string>
    <string name="wallet_otc_buy">OTC购买</string>
    <string name="wallet_game_buy">游戏充值</string>
    <string name="wallet_game_reward">游戏奖励</string>
    <string name="wallet_otc_sale">OTC卖出</string>
    <string name="wallet_out_charge">转出手续费</string>
    <string name="wallet_game_withdraw_money">游戏提币</string>

    <string name="collection_hint">扫二维码，转入</string>
    <string name="wallet_address">钱包地址</string>
    <string name="wallet_share">分享</string>
    <string name="wallet_copy">复制</string>
    <string name="wallet_set_money">设置金额</string>
    <string name="wallet_chain_balance">余额：</string>
    <string name="chain_chain_number_title">数量：</string>
    <string name="wallet_input_number_hint">请输入数量</string>
    <string name="wallet_collection_address">收款地址</string>
    <string name="wallet_input_address_hint">请输入有效的收款地址</string>
    <string name="wallet_miner_fee">矿工费</string>
    <string name="wallet_cancel">取消</string>
    <string name="wallet_address_book">我的地址本</string>
    <string name="wallet_address_book_nodata">暂无数据</string>
    <string name="wallet_choose_confirm">确认选择</string>
    <string name="wallet_choose_hint">请选择一个地址本</string>

    <string name="wallet_add_chain_address">新建地址</string>
    <string name="wallet_address_save">保存</string>
    <string name="wallet_address_name_hint">名称</string>
    <string name="wallet_address_desc_hint">描述（选填）</string>
    <string name="chain_type_title">选择地址类型</string>
    <string name="wallet_chain_info_title">基本信息</string>
    <string name="my_community">社区</string>
    <string name="wallet_chain_info_issue_data">发行数据</string>
    <string name="wallet_status_title">状态</string>
    <string name="wallet_issue_date_title">发行日期</string>
    <string name="wallet_issue_cost_title">发行成本</string>
    <!--交易-->
    <string name="transaction_buy">我要买</string>
    <string name="transaction_sale">我要卖</string>
    <string name="chain_number_title">数量</string>
    <string name="chain_quota_title">限额</string>
    <string name="chain_unit_price">单价</string>
    <string name="chain_purchase">购买</string>
    <string name="chain_withdraw">撤销</string>
    <string name="transaction_money">金额</string>
    <string name="transaction_buy_filter_hint">系统会为您筛选包含目标金额的商品</string>
    <string name="transaction_mode_of_payment">支付方式</string>
    <string name="transaction_buy_filter">筛选</string>
    <string name="transaction_buy_by_money">按金额购买</string>
    <string name="transaction_buy_by_number">按数量购买</string>
    <string name="transaction_buy_input_hint1">请输入购买金额</string>
    <string name="transaction_buy_input_hint2">请输入购买数量</string>
    <string name="transaction_buy_all_end">全部买入</string>
    <string name="transaction_buy_number">交易数量</string>
    <string name="transaction_actual_payment">实付款</string>
    <string name="transaction_auto_cancel">30S后自动取消</string>
    <string name="transaction_place_order">下单</string>
    <string name="transaction_count_down_title">付款时间剩余</string>
    <string name="transaction_payment_hint1">请打开您本人的</string>
    <string name="transaction_payment_hint2">,向收款人付款</string>
    <string name="transaction_buy_payee">收款人</string>
    <string name="transaction_buy_wechat">微信账号</string>
    <string name="transaction_successful_payment">我已成功付款</string>
    <string name="transaction_chain_type">币种</string>
    <string name="transaction_mini_trade">最小交易额（CNY）</string>
    <string name="transaction_maxi_trade">最大交易限额（CNY）</string>
    <string name="transaction_total_shipment">出货总量</string>
    <string name="transaction_collection_method">选择收款方式</string>
    <string name="transaction_pricing_method">定价方式</string>
    <string name="transaction_fixed_price">一口价</string>
    <string name="transaction_floating_price">浮动价</string>
    <string name="transaction_setting_premium">设置溢价</string>
    <string name="transaction_market_price">市场参考价</string>
    <string name="transaction_optional">选填</string>
    <string name="transaction_suggest">建议-10到0</string>
    <string name="transaction_setting_fix_price">固定价格</string>
    <string name="transaction_no_float">不随市价浮动</string>
    <string name="transaction_fix_price_end">发布后，该价格不会因市场波动而改变</string>
    <string name="transaction_please_enter_it">请手动输入</string>
    <string name="transaction_sale_comment">请输入备注信息（最多输入20个字符）</string>
    <string name="transaction_sale_confirm">提交</string>
    <string name="transaction_sale_explain">您的SEC交易平台保管，只有对方给您完成付款后平台才会将您的SEC发送给对方，请放心交易。</string>
    <string name="transaction_order">订单</string>
    <string name="transaction_order_number">订单号</string>
    <string name="transaction_order_all">全部</string>
    <string name="transaction_order_ongoing">进行中</string>
    <string name="transaction_order_failed">已取消</string>
    <string name="transaction_order_completed">已完成</string>
    <string name="transaction_trade">交易额</string>
    <string name="transaction_please_pay">请付款</string>
    <string name="transaction_please_pay_confirm">请确认收款</string>
    <string name="transaction_time_remaining">付款剩余时间</string>
    <string name="transaction_total_price">总价</string>
    <string name="transaction_seller_nickname1">卖家昵称</string>
    <string name="transaction_seller_nickname2">买家昵称</string>
    <string name="transaction_payment_method">收款方式</string>
    <string name="transaction_cancel_order">取消订单</string>

    <string name="transaction_to_pay">去付款</string>
    <string name="transaction_wait_confirm">等待卖家确认</string>

    <string name="transaction_pay_confirm">确认收款</string>
    <string name="transaction_wait_pay">等待买家付款</string>

    <string name="transaction_paytype_wechat">微信</string>
    <string name="transaction_paytype_alipay">支付宝</string>
    <string name="transaction_paytype_unionpay">银联</string>
    <string name="chain_ctime">下单时间</string>


</resources>
