<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallet">

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.code.safechain.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.code.safechain.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_ecotope"
        android:name="com.code.safechain.ui.ecotope.EcotopeFragment"
        android:label="@string/title_ecotope"
        tools:layout="@layout/fragment_ecotope" />

    <fragment
        android:id="@+id/navigation_consult"
        android:name="com.code.safechain.ui.consult.ConsultFragment"
        android:label="@string/title_consult"
        tools:layout="@layout/fragment_consult" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.code.safechain.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />

</navigation>