<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SetPwdActivity">
    <!--第一行-->
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/ic_my_back" />
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/regist_pwd_set"
            android:typeface="normal"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/dp_17" />
    </RelativeLayout>
    <!--第一行下的灰线-->
    <TextView
        android:id="@+id/txt_line"
        android:layout_below="@+id/rl_top"
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1" />
    <!--说明-->
    <TextView
        android:id="@+id/txt_explain"
        android:layout_below="@+id/txt_line"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_40"
        android:text="@string/set_pwd_explain"
        android:textSize="@dimen/dp_14"
        android:textColor="@color/colorExplain"
        android:typeface="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--密码-->
    <EditText
        android:id="@+id/et_pwd"
        android:layout_below="@+id/txt_explain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/dp_15"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorMyName"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/bg_login_account"
        android:typeface="normal"
        android:hint="@string/regist_pwd_hint"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />
    <!--确认密码-->
    <EditText
        android:id="@+id/et_pwd_sure"
        android:layout_below="@+id/et_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/dp_15"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorMyName"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/bg_login_account"
        android:typeface="normal"
        android:hint="@string/regist_pwd_sure_hint"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />
    <!--邀请码 头-->
    <TextView
        android:id="@+id/txt_invitation_code_title"
        android:layout_below="@+id/et_pwd_sure"
        android:layout_marginTop="@dimen/dp_23"
        android:layout_marginLeft="@dimen/dp_40"
        android:text="@string/regist_invitation_code"
        android:textSize="@dimen/dp_15"
        android:textColor="@color/colorMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--邀请码 输入框-->
    <EditText
        android:id="@+id/et_invitation_code"
        android:layout_below="@+id/txt_invitation_code_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/dp_15"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorMyName"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/bg_login_account"
        android:typeface="normal"
        android:hint="@string/regist_invitation_code_hint"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />
    <!--用户协议行-->
    <RelativeLayout
        android:id="@+id/rl_agree"
        android:layout_below="@+id/et_invitation_code"
        android:layout_marginTop="@dimen/dp_33"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_agree"
            android:background="@drawable/bg_regist_radio"
            android:layout_centerVertical="true"
            android:button="@null"
            android:layout_width="@dimen/dp_12"
            android:layout_height="@dimen/dp_12" />
        <TextView
            android:id="@+id/txt_agree"
            android:layout_toRightOf="@+id/rb_agree"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_centerVertical="true"
            android:text="@string/regist_agree"
            android:textSize="@dimen/dp_15"
            android:textColor="@color/colorIdentity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_user_agreement"
            android:layout_toRightOf="@+id/txt_agree"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_centerVertical="true"
            android:text="@string/regist_user_agreement"
            android:textSize="@dimen/dp_15"
            android:textColor="@color/colorPwdForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!--注册-->
    <Button
        android:id="@+id/btn_regist"
        android:text="@string/login_regist"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_yellow"
        android:layout_width="@dimen/dp_320"
        android:layout_height="@dimen/dp_40" />


</RelativeLayout>