<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <!--第一行-->
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/ic_my_back" />
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_login"
            android:typeface="normal"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/dp_17" />
    </RelativeLayout>
    <!--第一行下的灰线-->
    <TextView
        android:id="@+id/txt_line"
        android:layout_below="@+id/rl_top"
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1" />
    <ImageView
        android:id="@+id/img_logo"
        android:src="@mipmap/ic_logo_login"
        android:layout_below="@+id/txt_line"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_33"
        android:layout_height="@dimen/dp_59" />
    <TextView
        android:id="@+id/txt_app_name"
        android:text="@string/app_name"
        android:layout_below="@+id/img_logo"
        android:layout_marginTop="@dimen/dp_7"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--账号-->
    <EditText
        android:id="@+id/et_account"
        android:layout_below="@+id/txt_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_33"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/dp_15"
        android:textColor="@color/colorGrayButton"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/bg_login_account"
        android:typeface="normal"
        android:hint="@string/login_account_hint"
        android:paddingLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />
    <!--密码 android:drawableRight="@mipmap/ic_pwd_hidden"-->
    <EditText
        android:id="@+id/et_pwd"
        android:layout_below="@+id/et_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/dp_15"
        android:textColor="@color/colorGrayButton"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/bg_login_account"
        android:typeface="normal"
        android:hint="@string/login_pwd_hint"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />
    <!--忘记密码？-->
    <TextView
        android:id="@+id/txt_pwd_forget"
        android:layout_below="@+id/et_pwd"
        android:layout_marginTop="@dimen/dp_58"
        android:layout_marginLeft="@dimen/dp_33"
        android:text="@string/login_pwd_forget"
        android:textSize="@dimen/dp_13"
        android:textColor="@color/colorPwdForget"
        android:typeface="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--还没有账号？-->
    <TextView
        android:id="@+id/txt_account_not"
        android:layout_toRightOf="@+id/txt_pwd_forget"
        android:layout_alignBottom="@+id/txt_pwd_forget"
        android:layout_marginLeft="@dimen/dp_41"
        android:text="@string/login_account_not"
        android:textSize="@dimen/dp_13"
        android:textColor="@color/colorMyName"
        android:background="@color/colorGrayButton"
        android:typeface="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--去注册-->
    <TextView
        android:id="@+id/txt_goto_regist"
        android:layout_toRightOf="@+id/txt_account_not"
        android:layout_alignBottom="@+id/txt_account_not"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/login_goto_regist"
        android:textSize="@dimen/dp_13"
        android:textColor="@color/colorPwdForget"
        android:typeface="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--登录-->
    <Button
        android:id="@+id/btn_login"
        android:text="@string/login_login"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_yellow"
        android:layout_width="@dimen/dp_320"
        android:layout_height="@dimen/dp_40" />

</RelativeLayout>