<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--购买 文字-->
    <TextView
        android:id="@+id/txt_purchase"
        android:text="@string/chain_purchase"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorMyName"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--购买币名 -->
    <TextView
        android:id="@+id/txt_chain_name"
        android:text="HKDT"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorMyName"
        android:layout_toRightOf="@+id/txt_purchase"
        android:layout_alignBottom="@+id/txt_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--状态-->
    <TextView
        android:id="@+id/txt_status"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_alignTop="@+id/txt_purchase"
        android:text="【已取消】"
        android:textSize="@dimen/dp_13"
        android:textColor="@color/colorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--数量 文字-->
    <TextView
        android:id="@+id/txt_number_title"
        android:text="@string/chain_number_title"
        android:layout_below="@+id/txt_status"
        style="@style/Text2StyleOrder" />
    <!--数量 值-->
    <TextView
        android:id="@+id/txt_number"
        android:text="43.22HKDT"
        android:layout_toRightOf="@+id/txt_number_title"
        android:layout_alignBottom="@+id/txt_number_title"
        android:layout_marginLeft="@dimen/dp_36"
        style="@style/Text2StyleOrder" />
    <!--单价 文字-->
    <TextView
        android:id="@+id/txt_unit_price_title"
        android:text="@string/chain_unit_price"
        android:layout_below="@+id/txt_number_title"
        style="@style/Text2StyleOrder" />
    <!--单价 值-->
    <TextView
        android:id="@+id/txt_unit_price"
        android:text="￥ 8.45"
        android:layout_toRightOf="@+id/txt_unit_price_title"
        android:layout_alignBottom="@+id/txt_unit_price_title"
        android:layout_marginLeft="@dimen/dp_36"
        style="@style/Text2StyleOrder" />
    <!--订单号 文字-->
    <TextView
        android:id="@+id/txt_order_number_title"
        android:text="@string/transaction_order_number"
        android:layout_below="@+id/txt_unit_price_title"
        style="@style/Text2StyleOrder" />
    <!--订单号 值-->
    <TextView
        android:id="@+id/txt_order_number"
        android:text="202007231234567"
        android:layout_toRightOf="@+id/txt_order_number_title"
        android:layout_alignBottom="@+id/txt_order_number_title"
        style="@style/Text2StyleOrder"
        android:layout_marginLeft="0dp"
        android:layout_alignLeft="@+id/txt_unit_price"
        />
    <!--交易额 文字-->
    <TextView
        android:id="@+id/txt_trade_title"
        android:text="@string/transaction_trade"
        style="@style/Text2StyleOrder"
        android:layout_below="@+id/txt_status"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_alignRight="@+id/txt_status"
        android:layout_marginRight="@dimen/dp_10"
        />
    <!--交易额 值-->
    <TextView
        android:id="@+id/txt_trade"
        android:text="￥ 8.71"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorTitle"
        android:layout_below="@+id/txt_trade_title"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_alignRight="@+id/txt_trade_title"
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <!-- 底线-->
    <TextView style="@style/Line1Style" />
</RelativeLayout>