<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegistSuccessActivity">
    <!--第一行-->
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@mipmap/ic_my_back" />
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_regist"
            android:typeface="normal"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/dp_17" />
    </RelativeLayout>
    <!--第一行下的灰线-->
    <TextView
        android:id="@+id/txt_line"
        android:layout_below="@+id/rl_top"
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1" />
    <ImageView
        android:id="@+id/img_success"
        android:layout_below="@+id/txt_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_73"
        android:src="@mipmap/ic_regist_success"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70" />
    <TextView
        android:id="@+id/txt_congratulations"
        android:layout_below="@+id/img_success"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/regist_congratulations"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--去登录-->
    <Button
        android:id="@+id/btn_goto_login"
        android:text="@string/login_goto_login"
        android:textSize="@dimen/dp_17"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_yellow"
        android:layout_width="@dimen/dp_320"
        android:layout_height="@dimen/dp_40" />

</RelativeLayout>